# teaching-python-aidd-adv-oct-2021

./: .gitignore  README.md  setup.cfg
data/: data.csv
talk/: __init__.py  _server.py  section1.py  section2.py  section3.py  sectionE.py  slide01.py  slide02.py  slide03.py
