[metadata]
name = talk
url = https://github.com/ap--/teaching-python-aidd-adv-oct-2021
download_url = https://github.com/ap--/teaching-python-aidd-adv-oct-2021
description = Talk for the AIDD workshop
long_description = file: README.md
long_description_content_type = text/markdown
author = Andreas Poehlmann
author_email = andreas@poehlmann.io
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research

[options]
packages = find:
python_requires = >=3.7
install_requires =
    aiohttp
    flask
    numpy
    requests
    importlib_resources; python_version < '3.7'
    typing_extensions; python_version < '3.8'

[options.packages.find]
exclude =
    *.tests
